Se modifica el template publicaciones.html

--- a/FRONTEND/templates/publicaciones.html
+++ b/FRONTEND/templates/publicaciones.html
@@ -2,8 +2,8 @@
 {% block contenido %}
 
 <div id="formulario">
-    <header class="hero" style="text-align: center"; >
-        <h2 class="mark">Carga tu aporte en el siguiente formulario</h2>
+    <header class="header" style="text-align: center"; >
+        <h2 id="titulo_ventana">Carga tu aporte en el siguiente formulario</h2>
     </header>
 
     <form id="publicacionesForm"
