--- a/FRONTEND/templates/busqueda.html
+++ b/FRONTEND/templates/busqueda.html
@@ -323,6 +323,7 @@
 
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
-  <script defer src="{{ url_for('static', filename='js/busqueda.js') }}"></script>
+<script defer src="{{ url_for('static', filename='js/busqueda_filtros.js') }}"></script>
+<script defer src="{{ url_for('static', filename='js/busqueda_resenas.js') }}"></script>
 
 {% endblock %}
